# deep-learning-tutorial

./: .gitignore  README.md  pyproject.toml  train.py
configs/classification/: resnet18_cifar10.yaml  smallcnn_mnist.yaml
configs/nlp/: text_bilstm_tiny.yaml
scripts/: download_datasets.py
src/dl_tutorial/: __init__.py  builders.py  config.py  registry.py
src/dl_tutorial/data/: __init__.py  transforms.py
src/dl_tutorial/data/datasets/: __init__.py
src/dl_tutorial/engine/: __init__.py  train.py
src/dl_tutorial/losses/: __init__.py
src/dl_tutorial/models/: __init__.py  registry_impl.py
src/dl_tutorial/models/backbones/: __init__.py
src/dl_tutorial/models/heads/: __init__.py
src/dl_tutorial/optim/: __init__.py
src/dl_tutorial/utils/: __init__.py  checkpoint.py  logging.py  seed.py
