[project]
name = "deep-learning-tutorial"
version = "0.1.0"
description = "Modular deep learning tutorial framework with YAML configs, UV env, and TensorBoard."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

[project.urls]
Homepage = "https://example.com"

[project.dependencies]
pyyaml = "^6.0.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
tensorboard = "^2.17.0"
tqdm = "^4.66.4"
numpy = "^1.26.4"
requests = "^2.32.3"
pillow = "^10.4.0"
scikit-learn = "^1.5.1"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.sources]

[tool.uv.pip]
compile-bytecode = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dl_tutorial*"]
exclude = []
